--- a/emacs-nougat/nougat/emacs/autosaves.org
+++ b/emacs-nougat/nougat/emacs/autosaves.org
@@ -28,3 +28,8 @@ Here, save every 20 secs or 20 keystrokes.
 #+BEGIN_SRC emacs-lisp
   (setq auto-save-default t)
 #+END_SRC
+
+** disable lockfiles
+#+begin_src emacs-lisp
+(setq create-lockfiles nil)
+#+end_src
