--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-jira.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-jira.org
@@ -3,5 +3,7 @@
 markup for pasting into JIRA tickets & comments.
 #+CAPTION: Enable ox-jira
 #+begin_src emacs-lisp
-(use-package ox-jira)
+(use-package ox-jira
+ :straight (ox-jira :type git :host github :repo "stig/ox-jira.el" :branch "trunk")
+ )
 #+end_src
