--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -586,7 +586,7 @@ diff-hl is a "git gutter": it hilights changed lines on the left hand side of a 
          ("C-c C-p C-r" . webpaste-paste-region))
   :config
   (progn
-    (setq webpaste-provider-priority '("dpaste.org" "dpaste.com")))
+    (setq webpaste-provider-priority '("bpa.st" "dpaste.org" "dpaste.com")))
     (setq webpaste-paste-confirmation t)
 )
 #+end_src
