--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -389,7 +389,7 @@ effort to keep =$PATH= manipulation out of your =.zshrc=.
  )
 #+end_src
 
-** hyperbole
+** COMMENT hyperbole
 #+CAPTION:
 #+begin_src emacs-lisp
 (use-package hyperbole)
