--- a/emacs-nougat/nougat/emacs/minor-modes.org
+++ b/emacs-nougat/nougat/emacs/minor-modes.org
@@ -105,7 +105,8 @@ Show keybindings, because we have a LOT of them.
     :config
     ;; sort single chars alphabetically P p Q q
     (setq which-key-sort-order 'which-key-key-order-alpha)
-    (setq which-key-idle-delay 0.8)
+    (setq which-key-idle-delay 0.5)
+    (which-key-setup-side-window-right-bottom)
     (which-key-mode))
 #+END_SRC
 
