--- a/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
@@ -15,7 +15,7 @@
 #+begin_src emacs-lisp
   (setq org-babel-default-header-args
         '((:session . "none")
-          (:results . "silent")
+          (:results . "replace")
           (:exports . "code")
           (:cache . "no")
           (:noweb . "no")
