--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -38,8 +38,8 @@
       ("A"   counsel-rg "rg")
       ("o"   projectile-multi-occur "Occur in project")
       ("g"   counsel-projectile-git-grep "git grep")
-      ("r"   counsel-fzf "fzf here")
-      ("R"   gv/counsel-fzf-with-prefix-arg "fzf anywhere")
+      ("r"   fzf "fzf here")
+      ("R"   fzf-directory "fzf anywhere")
       ("h"   org-recent-headings)
       )
 
