--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -662,7 +662,7 @@ diff-hl is a "git gutter": it hilights changed lines on the left hand side of a 
 
 ** hl-todo
 nominally hilight lines that have todo in them
-#+begin_src emacs-lisp :results output silent
+#+begin_src emacs-lisp
   (use-package hl-todo
    :straight (hl-todo :type git
                  :host github
